# meanwhile-gaim

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.mingw  README  README.md  TODO  autogen.sh  configure.ac  gaim-meanwhile.spec.in  meanwhile-gaim.spec.in  theme_song
pixmaps/: Makefile.am
src/: .cvsignore  Makefile.am  config.h.in  mime.c  mime.h  mwgaim.c  mwgaim.h
